corrections in heading

--- a/processing_dataset/feature_extraction.ipynb
+++ b/processing_dataset/feature_extraction.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "svIt5l3bdrY_"
-      ],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/AgarwalMayank2/Face_Detection/blob/main/feature_extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,12 +12,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Loading dataset"
-      ],
       "metadata": {
         "id": "svIt5l3bdrY_"
-      }
+      },
+      "source": [
+        "# Loading dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -49,36 +31,36 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading from https://www.kaggle.com/api/v1/datasets/download/jessicali9530/lfw-dataset?dataset_version_number=4...\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 112M/112M [00:00<00:00, 143MB/s]"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Extracting files...\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4\n"
           ]
@@ -94,6 +76,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7rZ-bi5f7Mhd",
+        "outputId": "129a4524-638f-42c5-cab8-349ffc1b2cac"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Jason_Sorens/Jason_Sorens_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Guus_Hiddink/Guus_Hiddink_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Gerrit_Zalm/Gerrit_Zalm_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Kenenisa_Bekele/Kenenisa_Bekele_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Jeremy_Shockey/Jeremy_Shockey_0001.jpg']\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "images_address=\"/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled\"\n",
@@ -104,47 +103,47 @@
         "        paths_of_images.append(os.path.join(root, file))\n",
         "\n",
         "print(paths_of_images[:5])"
-      ],
-      "metadata": {
-        "id": "7rZ-bi5f7Mhd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "129a4524-638f-42c5-cab8-349ffc1b2cac"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Jason_Sorens/Jason_Sorens_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Guus_Hiddink/Guus_Hiddink_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Gerrit_Zalm/Gerrit_Zalm_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Kenenisa_Bekele/Kenenisa_Bekele_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Jeremy_Shockey/Jeremy_Shockey_0001.jpg']\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Filtering dataset"
-      ],
       "metadata": {
         "id": "c0M7t-7aD5Uh"
-      }
+      },
+      "source": [
+        "# Filtering dataset"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "W0b4WOVxF0Gz"
+      },
       "source": [
         "filtering persons who has less than 10 images and storing them in form of dictionary.\n",
         "\n",
         "person_imagepath = {person_name : [img_path1, img_path2, img_path3, ...]}"
-      ],
-      "metadata": {
-        "id": "W0b4WOVxF0Gz"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "81bwLf5yD_va",
+        "outputId": "bd54a0b7-cca2-4479-83c7-e04866c786a5"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "total datapoints having person atleast 10 images are 4324\n"
+          ]
+        }
+      ],
       "source": [
         "import re\n",
         "i=0\n",
@@ -163,45 +162,33 @@
         "    total_filtered_datapoints+=len(person_imagepath[person])\n",
         "\n",
         "print(\"total datapoints having person atleast 10 images are\",total_filtered_datapoints)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "81bwLf5yD_va",
-        "outputId": "bd54a0b7-cca2-4479-83c7-e04866c786a5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "total datapoints having person atleast 10 images are 4324\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Extracting CNN features\n"
-      ],
       "metadata": {
         "id": "xj82_wJv_WTi"
-      }
+      },
+      "source": [
+        "# Extracting CNN features\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Using pretrained CNN (ResNet)"
-      ],
       "metadata": {
         "id": "ndMl8Q0S74fi"
-      }
+      },
+      "source": [
+        "Using pretrained CNN (ResNet)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kPsWo-J67uJ1"
+      },
+      "outputs": [],
       "source": [
         "#This code can be used to extract pretrained CNN (ResNet) Features.\n",
         "#It takes Image Path and returns 2048-dimensional feature.\n",
@@ -237,15 +224,15 @@
         "    # Remove the batch dimension\n",
         "    features = features.squeeze(0)\n",
         "    return features"
-      ],
-      "metadata": {
-        "id": "kPsWo-J67uJ1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZPIR-WN094jt"
+      },
+      "outputs": [],
       "source": [
         "# saving featrues\n",
         "import pandas as pd\n",
@@ -264,48 +251,61 @@
         "df = pd.DataFrame(data_list)\n",
         "df.to_csv(\"filtered_CNN_features_dataset.csv\")\n",
         "df"
-      ],
-      "metadata": {
-        "id": "ZPIR-WN094jt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Extracting HoG features"
-      ],
       "metadata": {
         "id": "PGZlDRzmOZJk"
-      }
+      },
+      "source": [
+        "# Extracting HoG features"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "LW41ivV-PVnO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Extracting LBP features"
-      ],
       "metadata": {
         "id": "v6DhQkEbPWQb"
-      }
+      },
+      "source": [
+        "# Extracting LBP features"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "zP49tIbzPtfO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "svIt5l3bdrY_"
+      ],
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
