--- a/KNN_PRMLproj.ipynb
+++ b/KNN_PRMLproj.ipynb
@@ -8,7 +8,7 @@
         "svIt5l3bdrY_"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyODk6UitRZEVAzWDRV+tT4e",
+      "authorship_tag": "ABX9TyOPR3lO85TGofGnejXG7e1W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1577,6 +1577,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Combining all features"
+      ],
+      "metadata": {
+        "id": "CO_MKFsQGpPx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "combined_X_train = np.concatenate((X_train_cnn_pca, X_train_hog_pca, X_train_LBP_pca))\n",
+        "combined_X_test = np.concatenate((X_test_cnn_pca, X_test_hog_pca, X_test_LBP_pca))"
+      ],
+      "metadata": {
+        "id": "dPU4c3XwkdPj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "y_train = y_train_cnn\n",
@@ -1607,31 +1628,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Combining all features"
+        "# Check Printing"
       ],
       "metadata": {
-        "id": "CO_MKFsQGpPx"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "combined_X_train = np.concatenate((X_train_cnn_pca, X_train_hog_pca, X_train_LBP_pca))\n",
-        "combined_X_test = np.concatenate((X_test_cnn_pca, X_test_hog_pca, X_test_LBP_pca))"
-      ],
-      "metadata": {
-        "id": "dPU4c3XwkdPj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Feature Extraction final"
-      ],
-      "metadata": {
-        "id": "OFHsDQsNO_hi"
+        "id": "mPWmL6HUo2Yf"
       }
     },
     {
@@ -1679,15 +1679,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Train and Test dataframes"
-      ],
-      "metadata": {
-        "id": "b_c2_02Ab1sI"
-      }
     },
     {
       "cell_type": "markdown",
