--- a/Clustering_PRMLproj.ipynb
+++ b/Clustering_PRMLproj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEW81AZPC6lEkOqqCQr3hA",
+      "authorship_tag": "ABX9TyPJ1Tv8kU9wQLnEfKzv+l/J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,20 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CHugUBKzQO2Z"
+      },
+      "source": [
+        "Task : Identify Face in image using Decision Tree algorithm\n",
+        "dataset : using processed dataset\n",
+        "\n",
+        "we extracted CNN(ResNet), HoG, LBP features and made these processed datasets\n",
+        "\n",
+        "processed datasets : https://github.com/AgarwalMayank2/Face_Detection/tree/main/processed_dataset\n"
+      ]
     }
   ]
 }
