--- a/applying_ML_algorithms/KNN_PRMLproj.ipynb
+++ b/applying_ML_algorithms/KNN_PRMLproj.ipynb
@@ -1782,11 +1782,11 @@
         "print(f\"Common Classes: {len(common_classes)}\")"
       ],
       "metadata": {
-        "id": "YaZpddXCwOIV",
-        "outputId": "7d243a14-085e-4fe9-b3c5-e480973f51ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YaZpddXCwOIV",
+        "outputId": "7d243a14-085e-4fe9-b3c5-e480973f51ee"
       },
       "execution_count": 47,
       "outputs": [
@@ -1813,11 +1813,11 @@
         "print(\"Number of components to retain 95% variance:\", num_components)"
       ],
       "metadata": {
-        "id": "xgg2v1hPXapb",
-        "outputId": "6f0b699a-37eb-453e-ab6e-7627174abd09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xgg2v1hPXapb",
+        "outputId": "6f0b699a-37eb-453e-ab6e-7627174abd09"
       },
       "execution_count": 7,
       "outputs": [
@@ -1895,11 +1895,11 @@
         "print(np.sum(pca.explained_variance_ratio_))  # Should be close to 1"
       ],
       "metadata": {
-        "id": "-kV7M52hv_qS",
-        "outputId": "7ed73ed1-afd8-4621-8a93-95eadaf34b11",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-kV7M52hv_qS",
+        "outputId": "7ed73ed1-afd8-4621-8a93-95eadaf34b11"
       },
       "execution_count": 45,
       "outputs": [
@@ -1993,11 +1993,11 @@
         "print(np.sum(pca.explained_variance_ratio_))  # Should be close to 1"
       ],
       "metadata": {
-        "id": "GNRZGya1wCQB",
-        "outputId": "c445b771-8625-43f7-e327-3e9c410abd9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GNRZGya1wCQB",
+        "outputId": "c445b771-8625-43f7-e327-3e9c410abd9f"
       },
       "execution_count": 46,
       "outputs": [
@@ -2059,11 +2059,11 @@
       "execution_count": 56,
       "metadata": {
         "id": "dPU4c3XwkdPj",
-        "outputId": "098cefd4-c581-458d-cc50-1f54b9e40c35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        }
+        },
+        "outputId": "098cefd4-c581-458d-cc50-1f54b9e40c35"
       },
       "outputs": [
         {
@@ -2120,11 +2120,11 @@
         "print(X_test_cnn_pca.shape[1]+X_test_LBP_pca.shape[1])"
       ],
       "metadata": {
-        "id": "Y2pd_2SssyMv",
-        "outputId": "78f941fb-6223-45ee-ddc8-88225d191229",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Y2pd_2SssyMv",
+        "outputId": "78f941fb-6223-45ee-ddc8-88225d191229"
       },
       "execution_count": 58,
       "outputs": [
@@ -2145,11 +2145,11 @@
         "print(combined_X_test.shape[1])"
       ],
       "metadata": {
-        "id": "5h1-4eTJsqx8",
-        "outputId": "969b2c7f-612a-4b90-baf6-40a8d34fb76b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5h1-4eTJsqx8",
+        "outputId": "969b2c7f-612a-4b90-baf6-40a8d34fb76b"
       },
       "execution_count": 59,
       "outputs": [
@@ -2209,11 +2209,11 @@
       "cell_type": "code",
       "execution_count": 62,
       "metadata": {
-        "id": "cZTpYd4OWwkY",
-        "outputId": "8af5f018-4311-4078-a681-8c98d085d8e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cZTpYd4OWwkY",
+        "outputId": "8af5f018-4311-4078-a681-8c98d085d8e2"
       },
       "outputs": [
         {
@@ -2294,11 +2294,11 @@
         "    print(label_encoder.inverse_transform([y_test[i]])[0])"
       ],
       "metadata": {
-        "id": "gNGVBTmQY0jc",
-        "outputId": "b05cfd5f-f3cc-4cb6-a7ea-ebaa40d23314",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gNGVBTmQY0jc",
+        "outputId": "b05cfd5f-f3cc-4cb6-a7ea-ebaa40d23314"
       },
       "execution_count": 63,
       "outputs": [
@@ -2495,10 +2495,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "id": "dBOh51aIlv0Q",
         "outputId": "828cdfad-882a-430c-d38e-23246069f53b"
@@ -2612,6 +2613,18 @@
             "Label 300 detected : Tang_Jiaxuan\n",
             "Label 500 detected : John_Ashcroft\n"
           ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-77-c83b3dcadd00>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcombined_X_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# append the pair (distance, index) to distances\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mdist\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0meuclidean_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcombined_X_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcombined_X_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mdistances\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0;31m# sorting distances on the basis of first item of pair i.e. distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-34-8be4aad7922a>\u001b[0m in \u001b[0;36meuclidean_dist\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;31m# x1,y1,z1=x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0;31m# x2,y2,z2=y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ],
       "source": [
@@ -2651,11 +2664,11 @@
         "print(f\"Accuracy: {accuracy * 100:.2f}%\")"
       ],
       "metadata": {
-        "id": "p9O9iODmnVMx",
-        "outputId": "e752c197-3227-42c8-aba4-f336ba5d924d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p9O9iODmnVMx",
+        "outputId": "e752c197-3227-42c8-aba4-f336ba5d924d"
       },
       "execution_count": 38,
       "outputs": [
@@ -2672,11 +2685,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "iIw4qxY-Wwkf",
-        "outputId": "ad1dcc29-e042-4bb1-83da-89d37964cd21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iIw4qxY-Wwkf",
+        "outputId": "ad1dcc29-e042-4bb1-83da-89d37964cd21"
       },
       "outputs": [
         {
@@ -2747,12 +2760,12 @@
         "clf.fit(X_train_scaled, y_train_LBP)  # Assuming y_train_LBP contains correct labels"
       ],
       "metadata": {
-        "id": "5-B67BguuDln",
-        "outputId": "f00cc9d9-0ee9-4df2-b8e4-2561e672844a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "5-B67BguuDln",
+        "outputId": "f00cc9d9-0ee9-4df2-b8e4-2561e672844a"
       },
       "execution_count": 65,
       "outputs": [
@@ -3206,11 +3219,11 @@
         "print(\"Decision Tree Accuracy:\", accuracy)"
       ],
       "metadata": {
-        "id": "aXFP9-EAuIHN",
-        "outputId": "a794f74f-de6f-42a9-f389-bb3e54f7779c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aXFP9-EAuIHN",
+        "outputId": "a794f74f-de6f-42a9-f389-bb3e54f7779c"
       },
       "execution_count": 67,
       "outputs": [
@@ -3246,11 +3259,11 @@
         "print(\"K-Means Clustering ARI Score:\", ari_score)"
       ],
       "metadata": {
-        "id": "ALksTMbTvdlu",
-        "outputId": "fe887035-0d79-4172-cecd-9e7e325563de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ALksTMbTvdlu",
+        "outputId": "fe887035-0d79-4172-cecd-9e7e325563de"
       },
       "execution_count": 68,
       "outputs": [
@@ -3279,11 +3292,11 @@
         "print(\"Agglomerative Clustering ARI Score:\", ari_score_agg)"
       ],
       "metadata": {
-        "id": "SGMhHUlNveW6",
-        "outputId": "df66bd06-2634-43f3-81db-9c93be75081e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SGMhHUlNveW6",
+        "outputId": "df66bd06-2634-43f3-81db-9c93be75081e"
       },
       "execution_count": 44,
       "outputs": [
@@ -3310,12 +3323,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "mzdJBBJSvmzE",
-        "outputId": "e084402d-213b-4935-fc5c-3ebeb873951d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "mzdJBBJSvmzE",
+        "outputId": "e084402d-213b-4935-fc5c-3ebeb873951d"
       },
       "execution_count": 53,
       "outputs": [
@@ -3343,11 +3356,11 @@
         "print(\"Logistic Regression Accuracy:\", accuracy_score(y_test_LBP, y_pred))"
       ],
       "metadata": {
-        "id": "Zu3mmfGPw7u4",
-        "outputId": "33ef56ae-656f-4adf-8619-0bf75fd823ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zu3mmfGPw7u4",
+        "outputId": "33ef56ae-656f-4adf-8619-0bf75fd823ad"
       },
       "execution_count": 69,
       "outputs": [
@@ -3375,11 +3388,11 @@
         "print(\"Tuned KNN Accuracy:\", accuracy_score(y_test_LBP, y_pred_knn))"
       ],
       "metadata": {
-        "id": "fWXlJDmKx7WF",
-        "outputId": "b9481430-f893-45a7-e07f-929305a13120",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fWXlJDmKx7WF",
+        "outputId": "b9481430-f893-45a7-e07f-929305a13120"
       },
       "execution_count": 71,
       "outputs": [
@@ -3401,12 +3414,12 @@
         "knn.fit(X_train_scaled, y_train_LBP)"
       ],
       "metadata": {
-        "id": "MSJ-vg_hyRJG",
-        "outputId": "b479a288-e6d1-437e-ae9c-c9cb46fd1a25",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "MSJ-vg_hyRJG",
+        "outputId": "b479a288-e6d1-437e-ae9c-c9cb46fd1a25"
       },
       "execution_count": 72,
       "outputs": [
@@ -3854,11 +3867,11 @@
         "print(f'KNN Accuracy: {accuracy:.4f}')"
       ],
       "metadata": {
-        "id": "dJZ_q0ijy0sv",
-        "outputId": "c0686931-463e-4a8d-b279-3ca068429d04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dJZ_q0ijy0sv",
+        "outputId": "c0686931-463e-4a8d-b279-3ca068429d04"
       },
       "execution_count": 73,
       "outputs": [
@@ -3879,11 +3892,11 @@
         "print(classification_report(y_test_LBP, y_pred))"
       ],
       "metadata": {
-        "id": "WK6drPajzOSD",
-        "outputId": "06a0c03c-e88c-4eb4-81d7-8cb19b169519",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WK6drPajzOSD",
+        "outputId": "06a0c03c-e88c-4eb4-81d7-8cb19b169519"
       },
       "execution_count": 74,
       "outputs": [
